--- a/pom.xml
+++ b/pom.xml
@@ -49,19 +49,23 @@
         </dependency>
 
         <dependency>
-            <groupId>jetty</groupId>
-            <artifactId>org.mortbay.jetty</artifactId>
+            <groupId>org.mortbay.jetty</groupId>
+            <artifactId>jetty</artifactId>
             <version>6.1.18</version>
+            <!--<exclusions>
+                <groupId>jetty</groupId>
+                <artifactId>org.mortbay.jetty</artifactId>
+            </exclusions>-->
         </dependency>
         <dependency>
             <groupId>org.jboss.netty</groupId>
             <artifactId>netty</artifactId>
             <version>3.1.5.GA</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>org.jboss.netty</groupId>
             <artifactId>netty-httptunnel</artifactId>
             <version>1.0</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 </project>
