--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>com.kenai.jxse</groupId>
             <artifactId>jxse</artifactId>
-            <version>2.7</version>
+            <version>2.6</version>
         </dependency>
         <dependency>
             <groupId>bouncycastle</groupId>
@@ -62,10 +62,16 @@
             <artifactId>netty</artifactId>
             <version>3.1.5.GA</version>
         </dependency>
-        <!--<dependency>
+        <dependency>
             <groupId>org.jboss.netty</groupId>
             <artifactId>netty-httptunnel</artifactId>
             <version>1.0</version>
-        </dependency>-->
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.8</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
